6 0 0 flow without stack (#1448)
* Initial

* Flow changed

* Refactoring

* Tests

* Removed stack, refactoring

* SOAP versioning example modernized, refactoring

* Fixed code issues

* Fixed internalProxyTest

* Add SOAP Header example updated

* Updated StAX example

* Upate github build to 21

* workflow_dispatch

* Fixed tests, package scan form interceptors.* tests

* Refactoring, Internal proxy started

* Refactoring, Internal proxy started

* Refactoring tests, internal proxy tests

* CodeQL update

* CodeQL update Java  21

* LogInterceptor from headerOnly to body

* Tests, refactoring

* Optimized example

* XPathCBR removed, test adjusted, examples, cleanup

* Error handling

* Refactoring